# rust-chatroom

./: LICENSE  README.md
backend/: .env  Cargo.toml  README.md  chatroom.sql
backend/migrations/2023-05-30-114928_create_posts/: down.sql  up.sql
backend/migrations/2023-05-30-125643_dummy_data/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/db/: handler.rs  mod.rs  models.rs  schema.rs
frontend/rust-chatroom/: Cargo.toml  Trunk.toml  package-lock.json  package.json
frontend/rust-chatroom/src-tauri/: Cargo.toml  tauri.conf.json
