[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

"axum" = "0.6.18"
"tokio" = "1.12.0"
"tokio-postgres" = "0.7.2"
"diesel" = { version = "2.1.0", features = ["postgres", "chrono"] }
"dotenv" = "0.15.0"
"chrono" = "0.4.19"
